CL/HIER: split rail allreduce (#428)
* CORE: score update with empty dest

* CORE: schedule start task arg

    make ucc_schedule_start arg to be ucc_coll_task_t *, instead of
    schedule. This way it can be used as task start fn directly.

* TOPO: min/max ppn query

* CL/HIER: allreduce split rail

* CL/HIER: properly handle tl team fails

* TL/NCCL: fix allgatherv tune

    Set CUDA mem type.

* CL/HIER: split_rail avg not supported

* TEST: cl_hier ar split_rail jenkins

* CL/HIER: fix profile include

* REVIEW: update copyrights

--- a/src/components/cl/hier/Makefile.am
+++ b/src/components/cl/hier/Makefile.am
@@ -2,20 +2,22 @@
 # Copyright (C) Mellanox Technologies Ltd. 2020-2022.  ALL RIGHTS RESERVED.
 #
 
-allreduce =                   \
-	allreduce/allreduce.h     \
-	allreduce/allreduce_rab.c
+allreduce =                          \
+	allreduce/allreduce.h            \
+	allreduce/allreduce.c            \
+	allreduce/allreduce_rab.c        \
+	allreduce/allreduce_split_rail.c
 
 alltoallv =                   \
 	alltoallv/alltoallv.h     \
 	alltoallv/alltoallv.c
 
-alltoall =                  \
-	alltoall/alltoall.h     \
+alltoall =                    \
+	alltoall/alltoall.h       \
 	alltoall/alltoall.c
 
-barrier =                 \
-	barrier/barrier.h     \
+barrier =                     \
+	barrier/barrier.h         \
 	barrier/barrier.c
 
 sources =             \
