TL/NCCL: add gather

--- a/test/mpi/Makefile.am
+++ b/test/mpi/Makefile.am
@@ -10,21 +10,22 @@
 bin_PROGRAMS = ucc_test_mpi
 
 ucc_test_mpi_SOURCES = \
-	test_mpi.cc            \
-	main.cc                \
-	buffer.cc              \
-	mpi_util.cc            \
-	test_case.cc           \
-	test_barrier.cc        \
-	test_allreduce.cc      \
-	test_allgather.cc      \
-	test_allgatherv.cc     \
-	test_bcast.cc          \
-	test_alltoall.cc       \
-	test_alltoallv.cc      \
-	test_reduce_scatter.cc \
+	test_mpi.cc             \
+	main.cc                 \
+	buffer.cc               \
+	mpi_util.cc             \
+	test_case.cc            \
+	test_barrier.cc         \
+	test_allreduce.cc       \
+	test_allgather.cc       \
+	test_allgatherv.cc      \
+	test_bcast.cc           \
+	test_alltoall.cc        \
+	test_alltoallv.cc       \
+	test_reduce_scatter.cc  \
 	test_reduce_scatterv.cc \
-	test_reduce.cc
+	test_reduce.cc          \
+	test_gather.cc
 
 CXX=$(MPICXX)
 LD=$(MPICXX)
