--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,6 +13,11 @@ mc_dirs += components/mc/cuda
 ec_dirs += components/ec/cuda
 endif
 
+if HAVE_ROCM
+mc_dirs += components/mc/rocm
+ec_dirs += components/ec/rocm
+endif
+
 SUBDIRS = . $(cl_dirs) $(mc_dirs) $(ec_dirs)
 
 include components/tl/makefile.am
