--- a/test/mpi/Makefile.am
+++ b/test/mpi/Makefile.am
@@ -42,3 +42,9 @@ ucc_test_mpi_CPPFLAGS += $(CUDA_CPPFLAGS)
 ucc_test_mpi_LDFLAGS += $(CUDA_LDFLAGS)
 ucc_test_mpi_LDADD += $(CUDA_LIBS)
 endif
+
+if HAVE_ROCM
+ucc_test_mpi_CPPFLAGS += $(HIP_CPPFLAGS)
+ucc_test_mpi_LDFLAGS += $(HIP_LDFLAGS)
+ucc_test_mpi_LDADD += $(HIP_LIBS)
+endif
