--- a/tools/perf/Makefile.am
+++ b/tools/perf/Makefile.am
@@ -14,6 +14,7 @@ ucc_perftest_SOURCES =            \
 	ucc_pt_config.cc              \
 	ucc_pt_comm.cc                \
 	ucc_pt_cuda.cc                \
+	ucc_pt_rocm.cc                \
 	ucc_pt_benchmark.cc           \
 	ucc_pt_bootstrap_mpi.cc       \
 	ucc_pt_coll.cc                \
