--- a/tools/perf/Makefile.am
+++ b/tools/perf/Makefile.am
@@ -24,6 +24,7 @@ ucc_perftest_SOURCES =            \
 	ucc_pt_coll_alltoallv.cc      \
 	ucc_pt_coll_barrier.cc        \
 	ucc_pt_coll_bcast.cc          \
+	ucc_pt_coll_gather.cc         \
 	ucc_pt_coll_gatherv.cc        \
 	ucc_pt_coll_reduce.cc         \
 	ucc_pt_coll_reduce_scatter.cc \
