--- a/.ci/job_matrix.yaml
+++ b/.ci/job_matrix.yaml
@@ -1,46 +1,59 @@
 ---
-job: 'ucc'
+job: "ucc"
 
 step_allow_single_selector: true
 
-registry_host: 'harbor.mellanox.com'
-registry_path: '/torch-ucc'
-registry_auth: '05d98651-e11c-4a57-9cc6-52df79014b89'
+registry_host: "harbor.mellanox.com"
+registry_path: "/torch-ucc"
+registry_auth: "05d98651-e11c-4a57-9cc6-52df79014b89"
 
 volumes:
-  - { mountPath: '/hpc/local', hostPath: '/hpc/local' }
-  - { mountPath: '/auto/sw_tools', hostPath: '/auto/sw_tools' }
-  - { mountPath: '/.autodirect/mtrswgwork', hostPath: '/.autodirect/mtrswgwork' }
-  - { mountPath: '/.autodirect/sw/release', hostPath: '/.autodirect/sw/release' }
+  - { mountPath: "/hpc/local", hostPath: "/hpc/local" }
+  - { mountPath: "/auto/sw_tools", hostPath: "/auto/sw_tools" }
+  - {
+      mountPath: "/.autodirect/mtrswgwork",
+      hostPath: "/.autodirect/mtrswgwork",
+    }
+  - {
+      mountPath: "/.autodirect/sw/release",
+      hostPath: "/.autodirect/sw/release",
+    }
 
 env:
-  CUDA_VER: '11.4.2'
-  UCC_URI_SUFFIX: 'ucc/${UCC_VERSION}/x86_64/centos8/cuda${CUDA_VER}'
-  UCC_DOCKER_IMAGE_NAME: '${registry_host}${registry_path}/${UCC_URI_SUFFIX}'
-  NVIDIA_ROOT_DIR: '/opt/nvidia'
-  SRC_DIR: '${NVIDIA_ROOT_DIR}/src'
-  BIN_DIR: '${NVIDIA_ROOT_DIR}/bin'
-  DOCKER_OPT: '--pull always --network=host --uts=host --ipc=host --ulimit stack=67108864 --ulimit memlock=-1 --security-opt seccomp=unconfined --cap-add=SYS_ADMIN --device=/dev/infiniband/ --gpus all --user root'
+  CUDA_VER: "11.4.2"
+  UCC_URI_SUFFIX: "ucc/${UCC_VERSION}/x86_64/centos8/cuda${CUDA_VER}"
+  UCC_DOCKER_IMAGE_NAME: "${registry_host}${registry_path}/${UCC_URI_SUFFIX}"
+  NVIDIA_ROOT_DIR: "/opt/nvidia"
+  SRC_DIR: "${NVIDIA_ROOT_DIR}/src"
+  BIN_DIR: "${NVIDIA_ROOT_DIR}/bin"
+  DOCKER_OPT: "--pull always --network=host --uts=host --ipc=host --ulimit stack=67108864 --ulimit memlock=-1 --security-opt seccomp=unconfined --cap-add=SYS_ADMIN --device=/dev/infiniband/ --gpus all --user root"
 
 docker_opt: "$DOCKER_OPT"
 
 kubernetes:
-  cloud: 'swx-k8s'
+  cloud: "swx-k8s"
+
+credentials:
+  - {
+      credentialsId: "bc9a18d3-1153-449c-b924-7fc9249c9cc0",
+      usernameVariable: "UCC_USERNAME",
+      passwordVariable: "UCC_PASSWORD",
+    }
 
 runs_on_dockers:
   - {
-    file: '.ci/Dockerfile.centos8',
-    name: 'centos8',
-    tag: '${BUILD_NUMBER}',
-    arch: 'x86_64',
-    uri: '${UCC_URI_SUFFIX}',
-    build_args: '--rm --no-cache --build-arg CUDA_VER=${CUDA_VER} --build-arg NVIDIA_ROOT_DIR=${NVIDIA_ROOT_DIR}',
-    cloud: 'swx-k8s'
-  }
+      file: ".ci/Dockerfile.centos8",
+      name: "centos8",
+      tag: "${BUILD_NUMBER}",
+      arch: "x86_64",
+      uri: "${UCC_URI_SUFFIX}",
+      build_args: "--rm --no-cache --build-arg CUDA_VER=${CUDA_VER} --build-arg NVIDIA_ROOT_DIR=${NVIDIA_ROOT_DIR}",
+      cloud: "swx-k8s",
+    }
 
 # bare metal
 runs_on_agents:
-  - nodeLabel: 'swx-clx01'
+  - nodeLabel: "swx-clx01"
 
 timeout_minutes: 360
 
@@ -55,6 +68,17 @@ steps:
       docker pull ${DOCKER_IMAGE_NAME}
       docker create -ti --rm $DOCKER_OPT ${DOCKER_IMAGE_NAME} /bin/bash > ${WORKSPACE}/ucc_docker.id
       docker start $(cat ${WORKSPACE}/ucc_docker.id)
+
+  #============================================================================
+  - name: Run Coverity
+    credentialsId: "bc9a18d3-1153-449c-b924-7fc9249c9cc0"
+    agentSelector: "{nodeLabel: 'swx-clx01'}"
+    run: |
+      export UCC_PASSWORD=$UCC_PASSWORD
+      export UCC_USERNAME=$UCC_USERNAME
+      echo "Running coverity"
+      ${WORKSPACE}/.ci/scripts/coverity.sh
+    archiveArtifacts: .ci/scripts/cov-build/*
 
   #============================================================================
   - name: Run UCC / Torch-UCC tests
