--- a/.github/workflows/hpcsdk.yaml
+++ b/.github/workflows/hpcsdk.yaml
@@ -1,17 +1,17 @@
-name: HPC_SDK
+name: NVIDIA HPC SDK
 
 on: [push, pull_request]
 
 env:
-  HPCXDIR: /opt/nvidia/hpc_sdk/Linux_x86_64/2023/comm_libs/12.2/hpcx/latest/
-  NCCLDIR: /opt/nvidia/hpc_sdk/Linux_x86_64/2023/comm_libs/12.2/nccl/
-  CUDADIR: /opt/nvidia/hpc_sdk/Linux_x86_64/2023/cuda/12.2/
+  HPCXDIR: /opt/nvidia/hpc_sdk/Linux_x86_64/2025/comm_libs/12.8/hpcx/latest/
+  NCCLDIR: /opt/nvidia/hpc_sdk/Linux_x86_64/2025/comm_libs/12.8/nccl/
+  CUDADIR: /opt/nvidia/hpc_sdk/Linux_x86_64/2025/cuda/12.8/
 
 jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: nvcr.io/nvidia/nvhpc:23.9-devel-cuda12.2-ubuntu22.04
+      image: nvcr.io/nvidia/nvhpc:25.3-devel-cuda12.8-ubuntu24.04
     steps:
     - name: Install dependencies
       run: |
